# IBAMR_myIBFE

./: .gitignore  README.md  visualization.md
examples/IBFE/ex4/: ACExample.cpp  ACinput2d  CMakeLists.txt  MyExample.cpp  example.cpp  inputMy2d
mytest/UNC-ex1/: panexample.cpp  triangle.geo.opt
mytest/UNC-ex1-1/: panexample.cpp
mytest/UNC-ex1-2/: panInput2d  panexample.cpp
mytest/UNC-ex2/: manual.md  rotationexample.cpp
mytest/UNC-ex2-0/: rotationexample.cpp
mytest/UNC-ex2-1/: rotationexample.cpp
mytest/UNC-ex2-2/: manual.md  rotationexample.cpp
mytest/UNC-ex3/: manual.md  rotationexample.cpp
mytest/UNC-ex3-0/: rotationexample.cpp
mytest/UNC-ex4/: example.cpp  input2d
mytest/UNC-ex4-0/: example.cpp
mytest/UNC-ex4-1/: example.cpp
mytest/UNC-ex4-2/: manual.md
mytest/UNC-ex5/: example.cpp
mytest/UNC-ex5-0/: example.cpp
mytest/ex4/: ACexample.cpp  ACexample_epllise.cpp  ACexample_fish.cpp  ACexample_fish_muscle.cpp  ACinput2d  ACinput2d_ellipse  ACinput2d_fish_muscle  example.cpp  input2d
mytest/ex5/: ACexample_fish_muscle.cpp  ACinput2d_fish_muscle
mytest/ex5-eel2d/: Makefile.am  eel2d_ibfe.cpp  example.cpp  fish2d.geo.opt  input2d
mytest/ex5-eel2d-1/: eel2d_ibfe.cpp  input2d  optimize.md
mytest/ex5-eel2d-2/: eel2d_ibfe2.cpp
mytest/fish/: tasks-step.md
mytest/fish/UNC-ex3-0/: panInput2d
mytest/fish/UNC-ex4-2/: example.cpp  manual.md  panInput2d
mytest/fish/fish-0/: fish0.cpp  input2d
mytest/fish/fish-1/: README.md  fish1.cpp  input2d
mytest/fish/fish-2/: input2d
mytest/fish/fish-2-1/: README.md  fish2-1.cpp  input2d
mytest/fish/fish-3/: README.md  fish2.cpp
mytest/fish/fish-4-4/: fish4-4_1.cpp  fish4-4_2.cpp  fish4-4_3.cpp  fish4-4_8.cpp  input2d_1  input2d_2  input2d_3  input2d_8
mytest/fish/fish-4-4-inspection-test/: equation.md  fish4-4_0.cpp  fish4-4_1.cpp  input2d_0  input2d_1  solve_1.md  solve_2.md
mytest/fish/fish-4-4_EB/: equation.md  input2d_EB  (+4 more)
(+25 files in other folders)
